# ManpowerManagement

./: .gitignore  Approach1_Odoo.md  Approach2_Tally.md  AuthMatrixImpl.md  Solution_Coparison.md  UserStories.xlsx  mt_file.txt
Backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
Backend/app/: main.py
Backend/app/api/: __init__.py  router.py
Backend/app/api/routers/: __init__.py  iso20022.py  mt942.py  statements.py  system.py
Backend/app/api/schemas/: __init__.py  iso20022.py  mt940.py  mt942.py
Backend/app/core/: __init__.py  config.py  iso20022.py  mt940.py  mt942.py
Backend/app/db/models/: __init__.py
Backend/app/db/repositories/: __init__.py
Backend/app/services/: __init__.py  iso20022_service.py  mt940_service.py  mt942_service.py
Backend/app/utils/: __init__.py  time.py
Backend/app/workflows/: __init__.py  iso20022_processing.py  mt942_processing.py  statement_processing.py
Docs/: Solution_Coparison.md
Frontend/: .env.example  CAPABILITY_FLOW_MAPPING.md  COMPONENT_ARCHITECTURE.md  DYNAMIC_MENU_QUICK_REFERENCE.md  DYNAMIC_MENU_SYSTEM.md  PERMISSION_SYSTEM.md  README.md  WORKER_FLOW_CHECKLIST.md  WORKER_FLOW_COMPLETE.md  WORKER_FLOW_IMPLEMENTATION.md  WORKER_FLOW_INTEGRATION.md  WORKER_FLOW_VISUAL_GUIDE.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.ts
PaymentReconciliation/: .dockerignore  API_DOCUMENTATION.md  API_LINKAGE_DOCUMENTATION.md  API_UI_ALIGNMENT_GUIDE.md  AUTHENTICATION_GUIDE.md  AUTHORIZATION_RESET_README.md  AZURE_DEPLOYMENT.md  (+45 more)
(+379 files in other folders)
