[project]
name = "manpower-management-backend"
version = "0.1.0"
description = "Layered FastAPI service skeleton for manpower management."
requires-python = ">=3.11"
authors = [{name = "Your Team"}]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic[email]>=2.6",
  "pydantic-settings>=2.2",
  "email-validator>=2.1",
  "mt-940>=4.30",
  "pyiso20022>=0.8",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.3",
  "pytest>=8.0",
]

[tool.uvicorn]
app = "app.main:app"
reload = true
host = "0.0.0.0"
port = 8000
